name:                site
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/sites#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Settings
                     , Instances
                     , Lenses
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , pandoc
                     , pandoc-types
                     , template-haskell
                     , data-default
                     , shelly
                     , text
                     , bytestring
                     , time
                     , binary
                     , containers
                     , lens
                     , unordered-containers
                     , yaml
                     , pandoc-citeproc
                     , hashable
                     , derive
                     , taggy
                     , taggy-lens
  ghc-options:         -Wall -threaded -O2
