name:                sites
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/sites#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sites
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hakyll
                     , pandoc
                     , pandoc-types
                     , data-default
                     , shelly
                     , text
                     , bytestring
                     , time
  ghc-options:         -Wall -threaded -O2
