name:                factor-hensel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/konn/factor-hensel#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Algebra.Ring.Polynomial.Factorise.Hensel
  build-depends:       base >= 4.7 && < 5
                     , computational-algebra
                     , algebraic-prelude
                     , algebra
  default-language:    Haskell2010
  ghc-options:         -Wall
  extensions:         TypeInType , DataKinds , PolyKinds
                    , GADTs , MultiParamTypeClasses , TypeFamilies
                    , FlexibleContexts , FlexibleInstances
                    , UndecidableInstances
                    , OverloadedLabels , NoImplicitPrelude
                    , QuasiQuotes , ScopedTypeVariables


executable factor-hensel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , factor-hensel
                     , computational-algebra
                     , algebraic-prelude
  default-language:    Haskell2010

test-suite factor-hensel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , factor-hensel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bibucket.org/konn/factor-hensel
